[project]
name = "poetry-demo-test2"
version = "0.1.0"
description = "demo poetry test2"
authors = [
    {name = "fong",email = "fonggj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pandasql (>=0.7.3,<0.8.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

